--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "nuxt.config.js",
-      "use": "@nuxtjs/vercel-builder"
+      "use": "@nuxtjs/vercel-builde",
+      "config": {
+        "serverFiles": ["./.nuxt/routes.json"]
+      }
     }
   ]
 }
